syntax = "proto3";

package spotify.protoman;

option java_package = "com.spotify.protoman";
option go_package = "registry";
option java_multiple_files = true;

service SchemaProtodoc {
    rpc GetSubPackages(GetSubPackagesRequest) returns (GetSubPackagesResponse) {
    }
}


message GetSubPackagesRequest {
    string package_name = 1;
}

message GetSubPackagesResponse {
    repeated string sub_package_name = 1;
}
